--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%REACT_APP_CONTENT_HOST%/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="Microfront Container" />
+    <link rel="apple-touch-icon" href="%REACT_APP_CONTENT_HOST%/images/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<!-- Static contents fron content host -->
+    <link rel="stylesheet" href="%REACT_APP_CONTENT_HOST%/css/semantic.min.css"></link>
+    <link rel="stylesheet" href="%REACT_APP_CONTENT_HOST%/css/semantic-custom-ui.css"></link>
+    <link rel="stylesheet" href="%REACT_APP_CONTENT_HOST%/css/container.css"></link>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Frontend Container</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
