Container micro-Frontend env, nginx-config

--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%REACT_APP_CONTENT_HOST%/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Microfront Container" />
-    <link rel="apple-touch-icon" href="%REACT_APP_CONTENT_HOST%/images/favicon.ico" />
+<!-- Icons -->
+    <link rel="icon" href="%REACT_APP_ASSETS_HOST%/images/favicon.ico" />
+    <link rel="apple-touch-icon" href="%REACT_APP_ASSETS_HOST%/images/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 <!-- Static contents fron content host -->
-    <link rel="stylesheet" href="%REACT_APP_CONTENT_HOST%/css/semantic.min.css"></link>
-    <link rel="stylesheet" href="%REACT_APP_CONTENT_HOST%/css/semantic-custom-ui.css"></link>
-    <link rel="stylesheet" href="%REACT_APP_CONTENT_HOST%/css/container.css"></link>
+    <link rel="stylesheet" href="%REACT_APP_ASSETS_HOST%/css/semantic.min.css"></link>
+    <link rel="stylesheet" href="%REACT_APP_ASSETS_HOST%/css/semantic-custom-ui.css"></link>
+    <link rel="stylesheet" href="%REACT_APP_ASSETS_HOST%/css/container.css"></link>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
